# TemplateGo

./: CMakeLists.txt  README.md
src/: ASCII.cc  ASCII.h  Blas.cc  Blas.h  Board.cc  Board.h  CPUBackend.cc  CPUBackend.h  CPUPipe.cc  CPUPipe.h  CPUbackend.cc  CPUbackend.h  CUDABackend.cc  CUDABackend.h  CUDAbackend.cc  CUDAbackend.h  Cache.h  CacheTable.cc  CacheTable.h  Engine.cc  Engine.h  Evaluation.cc  Evaluation.h  GTP.cc  GTP.h  GameState.cc  GameState.h  Model.cc  Model.h  NetPipe.h  Network.cc  Network.h  NodePointer.h  Random.cc  Random.h  SGFStream.cc  SGFStream.h  SGFstream.cc  SGFstream.h  Search.cc  (+24 more)
src/KataGo/: KGModel.cc  KGModel.h  KGNetParameters.h
src/LZ/: LZCPUbackend.cc  LZCPUbackend.h  LZCUDAbackend.cc  LZCUDAbackend.h  LZModel.cc  LZModel.h  LZNetParameters.h
src/blas/: CPULayers.cc  CPULayers.h  CPUblas.cc  CPUblas.h
src/cuda/: CUDACommon.cc  CUDACommon.h  CUDAKernel.cu  CUDAKernel.h  CUDAKernels.cu  CUDAKernels.h  CUDALayers.cc  CUDALayers.h  CudaCommon.cu  CudaCommon.h  CudaKernel.cu  CudaKernel.h  CudaLayers.cc  CudaLayers.h
train/: CMakeLists.txt
train/src/: Loader.cc  Loader.h  Symmetry.cc  Symmetry.h  Torch.cc  Torch.h  Train.cc
